--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -62,3 +62,27 @@ body {
   margin-top: 10px;
   text-align: justify;
 }
+
+.product-name {
+  font-size: 70%;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000000;
+}
+
+.quantity {
+  font-size: 70%;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #555555;
+}
+
+.price {
+  font-size: 70%;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #008000;
+}
+
+.ubicacion {
+  margin-right: 10px;
+}
