--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -86,3 +86,10 @@ body {
 .ubicacion {
   margin-right: 10px;
 }
+
+#image-product {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin: 0 auto;
+}
